--- a/client/src/sass/abstracts/_colors.scss
+++ b/client/src/sass/abstracts/_colors.scss
@@ -22,3 +22,7 @@ $footer-bg: black;
 // App Colors
 $app-bg-color-fb: rgb(0, 0, 0);
 $app-bg-color: rgba(0, 238, 255, 0.5);
+
+// Button Colors
+$btn-clr: white;
+$btn-bg-clr: black;
