--- a/client/src/sass/components/_index.scss
+++ b/client/src/sass/components/_index.scss
@@ -1,6 +1,8 @@
-@forward 'header';
-@forward 'nav';
 @forward 'body';
-@forward 'hero';
-@forward 'footer';
+@forward 'button';
 @forward 'cards';
+@forward 'footer';
+@forward 'header';
+@forward 'hero';
+@forward 'nav';
+@forward 'newlist';
