--- a/client/src/sass/abstracts/_fonts.scss
+++ b/client/src/sass/abstracts/_fonts.scss
@@ -30,3 +30,6 @@ $footer-font-size: $font-size;
 // Card Font
 $card-font-size: $font-size;
 $card-font-fam: $aldrich;
+
+// Button Font
+$btn-fnt: $aldrich;
