--- a/client/src/sass/components/_button.scss
+++ b/client/src/sass/components/_button.scss
@@ -3,6 +3,7 @@
 .btn {
   color: $btn-clr;
   background-color: $btn-bg-clr;
+  font-family: $btn-fnt;
   text-decoration: none;
   padding: 0.3rem 0.5rem;
   border-radius: 10px;
