--- a/client/src/sass/abstracts/_fonts.scss
+++ b/client/src/sass/abstracts/_fonts.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Ubuntu:wght@300&family=Varela+Round&display=swap');
+
 // Font Families
 $apps-title: 'Shadows Into Light', cursive;
 $apps-subtitle: 'Ubuntu', sans-serif;
