Added the functionality of login and register page, still need to add validation

--- a/client/src/sass/pages/_login.scss
+++ b/client/src/sass/pages/_login.scss
@@ -32,6 +32,9 @@ input {
 .usernameTitle {
   font-family: $app-links;
 }
+.emailTitle {
+  font-family: $app-links;
+}
 .passwordTitle {
   font-family: $app-links;
 }
