--- a/client/src/sass/abstracts/_colors.scss
+++ b/client/src/sass/abstracts/_colors.scss
@@ -52,3 +52,8 @@ $app-bg-color: rgba(0, 238, 255, 0.5);
 $btn-clr: white;
 $btn-bg-clr: black;
 $red: red;
+
+// Tier Ranks Styling
+#S {
+  background-color: $darkest;
+}
