finished desktop tier list styling

--- a/client/src/sass/abstracts/_colors.scss
+++ b/client/src/sass/abstracts/_colors.scss
@@ -60,3 +60,19 @@ $btn-bg-clr: $light;
 #S {
   background-color: $darkest;
 }
+
+#A {
+  background-color: $dark;
+}
+
+#B {
+  background-color: $lighter;
+}
+
+#C {
+  background-color: $light;
+}
+
+#D {
+  background-color: $lightest;
+}
