--- a/client/src/sass/pages/_tierlist.scss
+++ b/client/src/sass/pages/_tierlist.scss
@@ -23,8 +23,14 @@
     flex-wrap: wrap;
 }
 
+// styling for word cloud sub-items
 [data-rbd-draggable-context-id="1"] {
     margin: 10px 20px;
     padding: 10px 20px;
     background-color: lightblue;
+}
+
+[id='Add Your Interests'] {
+    font-size: 20px;
+    padding: 10px 15px;
 }
