--- a/client/src/sass/components/_header.scss
+++ b/client/src/sass/components/_header.scss
@@ -24,7 +24,15 @@
 .mission-statement {
   height: 300px;
   width: 100%;
-  background-color: $dark;
+  background-color: $darkest;
+  font-family: $ubuntu;
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5%;
+  color: $lightest
 }
 
 @media screen and (max-width: 1024px) {
