--- a/client/src/sass/components/_hero.scss
+++ b/client/src/sass/components/_hero.scss
@@ -1,28 +1,39 @@
 @use '../abstracts' as *;
 
+// .tsparticles-canvas-el
+
 .app-hero {
   position: relative;
   text-align: center;
   width: 100%;
   max-height: 45vh;
   height: 500px;
-  color: $hero-text-clr;
-  background-color: $hero-bg;
+  color: $darkest;
+  font-family: $app-links;
   overflow: hidden;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 }
 
 .app-heading {
   position: absolute;
+  margin-right: 20%;
 }
 
 .app-hero img {
   object-position: center bottom;
   width: 100%;
   margin: 0 auto;
-  position: absolute;
-  top: 0px;
+  position: relative;
+  bottom: 0;
   z-index: -1;
+}
+
+.background {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
