--- a/client/src/sass/components/_nav.scss
+++ b/client/src/sass/components/_nav.scss
@@ -35,6 +35,15 @@
   }
 }
 
+.navbar {
+  .navigation {
+    font-family: $apps-subtitle;
+    width: 100vw;
+    background-color: $darkest;
+    color: $lightest;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .nav {
     flex-flow: column wrap;
